--- a/src/common/AppHeader.css
+++ b/src/common/AppHeader.css
@@ -35,13 +35,17 @@
     vertical-align: middle;
     padding-left: 15px;
     padding-right: 15px;
-    color: rgba(0, 0, 0, 0.65);
 }
 
 .app-nav ul li a:hover {
-    color: #0f96f6;
+    color: #a9ddd6;
 }
 
 .app-nav ul li a.active {
-    color: #0f96f6;
+    color: #a9ddd6;
+}
+
+.app-top-box {
+    background-color: #2e3532;
+    box-shadow: 0 10px 20px #2e3532;
 }
