--- a/src/user/login/Login.css
+++ b/src/user/login/Login.css
@@ -4,8 +4,7 @@
 
 
 .login-content {
-    background: #fff;
-    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
+    box-shadow: 0 0 30px #0000007a;
     border-radius: 2px;
     width: 500px;
     display: inline-block;
@@ -15,10 +14,21 @@
     padding: 35px;
 }
 
+.social-btn.google > img {
+    margin-top: 5px;
+}
+
+.social-btn:hover {
+    background-color: #a9ddd6;
+    color: black;
+}
+
 .social-btn {
+    background-color: #35605a;
     margin-bottom: 15px;
     font-weight: 400;
     font-size: 16px;
+    color: black;
 }
 
 .social-btn img {
