--- a/src/user/signup/Signup.css
+++ b/src/user/signup/Signup.css
@@ -4,8 +4,7 @@
 
 
 .signup-content {
-    background: #fff;
-    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
+    box-shadow: 0 0 30px #0000007a;
     border-radius: 2px;
     width: 500px;
     display: inline-block;
