--- a/src/trading/manual/ManualTrading.css
+++ b/src/trading/manual/ManualTrading.css
@@ -1,12 +1,14 @@
 
 .market {
-    width: 50%;
+    width: 100%;
     height: 100%;
+    display: flex;
 }
 
 .chart {
+    margin-left: 25%;
     height: 50vh;
-    width: 100%;
+    width: 50%;
 }
 
 .manual-trading-container {
@@ -15,6 +17,7 @@
 }
 
 .manual-trading-panel {
+    z-index: 5;
     min-height: 200px;
     background-color: #6f9f98;
 }
@@ -45,6 +48,7 @@
 
 .manual-trading-panel--order,
 .manual-trading-panel--button--buy {
+    z-index: 6;
     height: 150px;
     width: 25%;
     border: 1px solid blanchedalmond;
@@ -65,4 +69,12 @@
     background-color: rgba(146, 248, 171, 0.4);
 }
 
+.manual-trading-panel--container {
+    display: flex;
+    margin-left: 25%;
+    width: 50%;
+    flex-flow: column;
+    padding-top: 30%;
+    align-items: center;
+}
 
