--- a/src/trading/manual/ManualTrading.css
+++ b/src/trading/manual/ManualTrading.css
@@ -1,5 +1,5 @@
-
 .market {
+    z-index: 1;
     width: 100%;
     height: 100%;
     display: flex;
@@ -16,10 +16,17 @@
     justify-content: center;
 }
 
+.manual-trading-panel:hover {
+    opacity: 1;
+}
+
 .manual-trading-panel {
+    width: 100%;
+    opacity: 0.7;
     z-index: 5;
-    min-height: 200px;
     background-color: #6f9f98;
+    position: absolute;
+    top: 93%;
 }
 
 .manual-trading-panel--info-row {
@@ -46,8 +53,7 @@
     padding: 1%;
 }
 
-.manual-trading-panel--order,
-.manual-trading-panel--button--buy {
+.manual-trading-panel--order {
     z-index: 6;
     height: 150px;
     width: 25%;
@@ -55,26 +61,41 @@
 }
 
 .manual-trading-panel--button--buy {
-    padding: 60px 10% 5%;
+    border: 1px solid blanchedalmond;
+    height: 40px;
+    z-index: 6;
+    width: 15%;
+    opacity: 0.8;
+    padding: 2% 5% 1%;
     cursor: pointer;
-    background-color: rgba(146, 248, 171, 0.2);
+    background-color: rgba(146, 248, 171, 0.7);
+    position: absolute;
+    top: 85%;
 }
 
+.manual-trading-panel--button--buy:active,
 .manual-trading-panel--button--buy:hover {
+    opacity: 1;
     border: 1px solid #75f339;
-    background-color: rgba(146, 248, 171, 0.3);
-}
-
-.manual-trading-panel--button--buy:active {
-    background-color: rgba(146, 248, 171, 0.4);
+    background-color: rgba(146, 248, 171, 0.8);
 }
 
 .manual-trading-panel--container {
-    display: flex;
-    margin-left: 25%;
+    position: absolute;
+    height: 90%;
     width: 50%;
+    left: 25%;
+    display: flex;
     flex-flow: column;
-    padding-top: 30%;
+    justify-content: flex-end;
     align-items: center;
+}
+
+.manual-trading-panel--container-invisible {
+    width: 100%;
+    top: 0;
+    bottom: 25%;
+    height: 85%;
+    position: absolute;
 }
 
