--- a/src/chart/Chart.css
+++ b/src/chart/Chart.css
@@ -7,7 +7,7 @@
 .klines {
     display: flex;
     flex-flow: row;
-    width: 95%;
+    width: 80%;
     height: 90%;
     justify-content: flex-end;
 }
@@ -45,7 +45,7 @@
 .chart-wide-option--zoom-plus,
 .chart-wide-option--prev-page,
 .chart-wide-option--next-page {
-    padding: 4% 5% 5% 6%;
+    padding: 2% 6% 0;
     width: 15%;
     margin: 1%;
     background-color: #8cbeb752;
