Correct positioning for chart candles

--- a/src/chart/Chart.css
+++ b/src/chart/Chart.css
@@ -12,8 +12,13 @@
     justify-content: flex-end;
 }
 
-.kline {
+.kline,
+.kline-upper,
+.kline-lower {
     position: relative;
+}
+
+.kline-wrap {
 }
 
 .chart-wide-options {
