--- a/src/trading/auto/AutoTrading.css
+++ b/src/trading/auto/AutoTrading.css
@@ -66,8 +66,9 @@
     height: 45px;
     z-index: 6;
     width: 15%;
-    padding: 2% 5% 1%;
+    padding-top: 0.7em;
     cursor: pointer;
+    text-align: center;
     background-color: rgba(146, 248, 171, 0.9);
     position: absolute;
     top: 85%;
