Added more trading pairs

--- a/src/chart/Chart.css
+++ b/src/chart/Chart.css
@@ -1,13 +1,16 @@
 .chart-wide {
     width: calc(100% - 2px);
-    position: fixed;
-    height: 83%;
+    height: 80vh;
     padding: 1%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 .chart-wide-wrap {
     border: 1px solid grey;
     height: 100%;
+    width: 100%;
 }
 
 .klines {
