--- a/src/trading/auto/AutoTrading.css
+++ b/src/trading/auto/AutoTrading.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 .chart {
@@ -14,6 +16,9 @@
 .auto-trading-container {
     display: flex;
     justify-content: center;
+    flex-flow: row;
+    width: 600%;
+    height: 100vh;
 }
 
 .auto-trading-panel:hover {
@@ -26,7 +31,6 @@
     opacity: 0.7;
     z-index: 5;
     background-color: #6f9f98;
-    position: absolute;
     top: 93%;
 }
 
@@ -70,7 +74,6 @@
     cursor: pointer;
     text-align: center;
     background-color: rgba(146, 248, 171, 0.9);
-    position: absolute;
     top: 85%;
 }
 
@@ -83,7 +86,6 @@
 
 .auto-trading-panel--container {
     pointer-events: none;
-    position: absolute;
     height: 90%;
     width: 50%;
     left: 25%;
