--- a/src/trading/manual/ManualTrading.css
+++ b/src/trading/manual/ManualTrading.css
@@ -11,6 +11,10 @@
     width: 50%;
 }
 
+.manual-trading-container .chart-wide {
+    position: fixed;
+}
+
 .manual-trading-container {
     display: flex;
     justify-content: center;
@@ -55,8 +59,8 @@
     padding: 1%;
     cursor: default;
     z-index: 6;
-    height: 150px;
-    width: 25%;
+    height: 160px;
+    width: 20%;
     border: 1px solid blanchedalmond;
 }
 
@@ -66,11 +70,12 @@
     height: 45px;
     z-index: 6;
     width: 15%;
-    padding: 2% 5% 1%;
+    padding: 1% 0 0;
     cursor: pointer;
     background-color: rgba(146, 248, 171, 0.9);
     position: absolute;
     top: 85%;
+    text-align: center;
 }
 
 .manual-trading-panel--button--buy:active,
@@ -84,8 +89,8 @@
     pointer-events: none;
     position: absolute;
     height: 90%;
-    width: 50%;
-    left: 25%;
+    width: 75%;
+    left: 12%;
     display: flex;
     flex-flow: column;
     justify-content: flex-end;
