--- a/src/trading/manual/ManualTrading.css
+++ b/src/trading/manual/ManualTrading.css
@@ -59,7 +59,7 @@
     padding: 1%;
     cursor: default;
     z-index: 6;
-    height: 160px;
+    height: 165px;
     width: 20%;
     border: 1px solid blanchedalmond;
 }
@@ -106,3 +106,10 @@
     position: absolute;
 }
 
+.manual-trading-panel--order-info-row {
+    font-size: 14px;
+}
+
+.manual-trading-panel--order-real {
+    border: #cd8383 1px solid;
+}
