Saving code state

--- a/src/trading/manual/ManualTrading.css
+++ b/src/trading/manual/ManualTrading.css
@@ -164,11 +164,13 @@
     text-align: center;
 }
 
-.order-control-cancel {
+.order-control-cancel,
+.order-control-close {
     background-color: #cd8383;
 }
 
-.order-control-cancel:hover {
+.order-control-cancel:hover,
+.order-control-close:hover {
     background-color: #b34343;
 }
 
